# vectorserver

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
app/: db.py  embeddings.py  exceptions.py  library_service.py  logger.py  main.py  settings.py
app/models/: base.py  chunk.py  document.py  library.py  models.py  responses.py
app/repositories/: base.py  chunk.py  db.py  document.py  library.py  vector_index.py
app/routes/: __init__.py  chunks.py  documents.py  indexes.py  libraries.py  search.py
app/services/: chunk_service.py  document_service.py  library_service.py  search_service.py  vector_index_service.py
app/utils/: flat_index.py  ivf.py  load_documents.py  metadata_filter.py  persistent_index.py  smart_chunker.py
data/: dev.sqlite
tests/: conftest.py  test_api.py  test_db.py  test_e2e.py  test_indexing.py  test_main.py  test_metadata_filter.py  test_repositories.py  test_repository.py  test_search.py  test_security.py  test_services.py
tests/docs/: alpine_climbing_basics.txt  machine_learning.txt
