[project]
name = "vectorserver"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "cohere>=5.17.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.2.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pynvim>=0.6.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 88
target-version = "py313"

lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
extend-exclude = ["tests/test_e2e.py"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "venv/*",
    "*/site-packages/*",
]
